--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,9 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div >
-            
-            <div id="deviceready" class="">
+        <div class="app">
+            <h1>Apache Cordova</h1>
+            <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
                 <button id="buyNowBtn"> Buy Now !</button>
@@ -39,7 +39,6 @@
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/paypal-mobile-js-helper.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
